# Project2

./: Project.vsdx  Project2_verslag.docx  mbedserver.vsdx  zottewagen.pptx  ~$$mbedserver.~vsdx  ~$oject2_verslag.docx  ~WRL0432.tmp
Project2_ANDROID/app/: build.gradle  proguard-rules.pro
Project2_ANDROID/app/src/androidTest/java/com/example/kristof/project2_android/: ExampleInstrumentedTest.java
Project2_ANDROID/app/src/main/: AndroidManifest.xml
Project2_ANDROID/app/src/main/java/com/example/kristof/project2_android/: MainActivity.java  Timer.java  VerticalSeekBar.java
Project2_ANDROID/app/src/main/res/drawable/: thumb_image.xml
Project2_ANDROID/app/src/main/res/layout/: activity_main.xml
Project2_ANDROID/app/src/main/res/values/: strings.xml
Project2_ANDROID/app/src/test/java/com/example/kristof/project2_android/: ExampleUnitTest.java
Project2_ANDROID/gradle/wrapper/: gradle-wrapper.properties
project2_car/: CMakeLists.txt  Controller.cpp  Controller.h  LightCommunication.cpp  LightCommunication.h  RemoteIR.lib  m3pi.lib  main.cpp  proj2_car.uvoptx  proj2_car.uvprojx
project2_car/.hg/: dirstate  hgignore  hgrc  last-message.txt  undo.backup.dirstate  undo.desc  undo.dirstate
project2_car/.hg/cache/: branch2-base  branch2-served  branchheads  rbc-revs-v1  tags  tags2-visible
project2_car/.hg/store/: 00changelog.i  00manifest.i  fncache  undo  undo.phaseroots
project2_car/.hg/store/data/: _controller.cpp.i  _controller.h.i  _light_communication.cpp.i  _light_communication.h.i  m3pi.lib.i  main.cpp.i  mbed.bld.i
project2_car/RemoteIR/: ReceiverIR.cpp
project2_car/RemoteIR/.hg/: dirstate  undo.desc
project2_car/RemoteIR/.hg/cache/: branchheads  nooutgoing
project2_car/RemoteIR/.hg/store/: 00changelog.i  00manifest.i
project2_car/RemoteIR/.hg/store/data/: _receiver_i_r.cpp.i  _receiver_i_r.h.i  _transmitter_i_r.cpp.i  _transmitter_i_r.h.i
project2_car/m3pi/: m3pi.cpp  m3pi.h
project2_car/m3pi/.hg/: dirstate  hgrc  undo.desc
project2_car/m3pi/.hg/cache/: branchheads  nooutgoing  tags
project2_car/m3pi/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
project2_car/m3pi/.hg/store/data/: m3pi.cpp.i  m3pi.h.i
project2_car/mbed-rtos/.hg/: dirstate
project2_car/mbed-rtos/.hg/cache/: nooutgoing
project2_car/mbed/TARGET_LPC1768/TOOLCHAIN_ARM_STD/: mbed.ar
project2_server/: CMakeLists.txt  Communication.cpp  Communication.h  Controller.cpp  Controller.h  EthernetInterface.lib  JSONParser.cpp  JSONParser.h  LCD.cpp  LCD.h  LM75B.lib  LightCommunication.cpp  LightCommunication.h  Proj2.uvoptx  Proj2.uvprojx  main.cpp  picojson.lib
project2_server/.hg/: dirstate  hgignore  hgrc  last-message.txt  undo.backup.dirstate  undo.desc  undo.dirstate
project2_server/.hg/cache/: branch2-base  branch2-served  branchheads  rbc-revs-v1  tags  tags2-visible
project2_server/.hg/store/: 00changelog.i  00manifest.i  fncache  undo  undo.phaseroots
project2_server/.hg/store/data/: _c12832.lib.i  _communication.cpp.i  _communication.h.i  _controller.cpp.i  _controller.h.i  _ethernet_interface.lib.i  _j_s_o_n_parser.cpp.i  _j_s_o_n_parser.h.i  _l_c_d.cpp.i  _l_c_d.h.i  _l_m75_b.lib.i  _light_communication.cpp.i  _light_communication.h.i  _remote_i_r.lib.i  main.cpp.i  mbed-rtos.lib.i  mbed.bld.i  picojson.lib.i
project2_server/.hg/store/data/~2eidea/: misc.xml.i  vcs.xml.i
project2_server/C12832/.hg/: dirstate  hgrc
project2_server/EthernetInterface/: lwip-eth.lib  lwip.lib
project2_server/EthernetInterface/.hg/: dirstate  hgrc  last-message.txt  undo.dirstate
project2_server/EthernetInterface/.hg/cache/: branchheads  nooutgoing  tags
project2_server/EthernetInterface/.hg/store/: 00changelog.i  00manifest.i  phaseroots  undo
project2_server/EthernetInterface/.hg/store/data/: lwip-eth.lib.i  lwip.lib.i
project2_server/EthernetInterface/Socket/.hg/: dirstate
project2_server/EthernetInterface/Socket/.hg/cache/: nooutgoing
project2_server/EthernetInterface/lwip-eth/.hg/: dirstate
project2_server/EthernetInterface/lwip-eth/.hg/cache/: nooutgoing
project2_server/EthernetInterface/lwip-sys/.hg/: dirstate
project2_server/EthernetInterface/lwip-sys/.hg/cache/: nooutgoing  tags
project2_server/EthernetInterface/lwip/.hg/: dirstate
project2_server/EthernetInterface/lwip/.hg/cache/: nooutgoing  tags
project2_server/LM75B/: LM75B.cpp  LM75B.h
project2_server/LM75B/.hg/: dirstate  hgrc  last-message.txt  undo.dirstate
project2_server/LM75B/.hg/cache/: branchheads  nooutgoing  tags
project2_server/LM75B/.hg/store/: 00changelog.i  00manifest.i  undo
project2_server/LM75B/.hg/store/data/: _l_m75_b.cpp.i  _l_m75_b.h.i
project2_server/RemoteIR/.hg/: dirstate  hgrc
project2_server/RemoteIR/.hg/cache/: tags
project2_server/RemoteIR/.hg/store/: fncache  undo
project2_server/RemoteIR/.hg/store/data/: _remote_i_r.h.i  _semaphore.h.i  mbed.bld.i
project2_server/mbed-rtos/.hg/: dirstate
project2_server/picojson/.hg/: dirstate  hgrc  undo.desc
project2_server/picojson/.hg/cache/: branchheads  nooutgoing  tags
project2_server/picojson/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
project2_server/picojson/.hg/store/data/: picojson.h.i
project2_verslag/: Project2_verslag.docx  Project2_verslag_final.docx  Project2_verslag_fixed.doc  Project2_verslag_fixed.docx  Project2_verslag_fixed2.docx  Project_overzicht.vsdx  mbedserver_ipoverzicht.vsdx
project2_webpage/: package.json
